<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="misc_setting"
        android:title="@string/preference_category_miscellaneous"
        android:fragment="net.kdt.pojavlaunch.fragments.MainMenuFragment"
        android:icon="@drawable/ic_close"
        android:layout="@layout/preference_back_button" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="checkLibraries"
        android:summary="@string/mcl_setting_check_libraries_subtitle"
        android:title="@string/mcl_setting_check_libraries"
        android:layout="@layout/preference_switch_layout"/>
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="arc_capes"
        android:summary="@string/arc_capes_desc"
        android:title="@string/arc_capes_title"
        android:layout="@layout/preference_switch_layout" />
    <androidx.preference.ListPreference
        android:defaultValue="default"
        android:key="downloadSource"
        android:entries="@array/download_source_names"
        android:entryValues="@array/download_source_values"
        android:title="@string/preference_download_source_title"
        android:summary="@string/preference_download_source_description"
        app2:useSimpleSummaryProvider="true"
        android:layout="@layout/preference_layout"/>
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="verifyManifest"
        android:title="@string/preference_verify_manifest_title"
        android:summary="@string/preference_verify_manifest_description"
        android:layout="@layout/preference_switch_layout"/>

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="zinkPreferSystemDriver"
        android:summary="@string/preference_vulkan_driver_system_description"
        android:title="@string/preference_vulkan_driver_system_title"
        android:layout="@layout/preference_switch_layout"/>

</PreferenceScreen>