<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="video_setting"
        android:title="@string/preference_category_video"
        android:fragment="net.kdt.pojavlaunch.fragments.MainMenuFragment"
        android:icon="@drawable/ic_close"
        android:layout="@layout/preference_back_button" />

    <androidx.preference.ListPreference
        android:title="@string/mcl_setting_category_renderer"
        android:key="renderer"
        android:defaultValue="opengles2"
        android:icon="@drawable/ic_setting_video"
        app2:useSimpleSummaryProvider="true"
        android:layout="@layout/preference_layout"/>

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="ignoreNotch"
        android:summary="@string/mcl_setting_subtitle_ignore_notch"
        android:title="@string/mcl_setting_title_ignore_notch"
        android:icon="@drawable/ic_setting_hide_notch"
        android:layout="@layout/preference_switch_layout"
        />

    <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
        android:key="resolutionRatio"
        android:summary="@string/mcl_setting_subtitle_resolution_scaler"
        android:title="@string/mcl_setting_title_resolution_scaler"
        app2:showSeekBarValue="true"
        app2:selectable="false"
        app2:min="@integer/resolution_seekbar_min"
        app2:seekBarIncrement="@integer/resolution_seekbar_increment"
        android:icon="@drawable/ic_setting_screen_resolution"
        android:layout="@layout/preference_seekbar_layout"
        />

    <androidx.preference.SwitchPreferenceCompat
        android:title="@string/preference_sustained_performance_title"
        android:summary="@string/preference_sustained_performance_description"
        android:key="sustainedPerformance"
        android:defaultValue="false"
        android:icon="@drawable/ic_menu_settings_active"
        android:layout="@layout/preference_switch_layout"
        />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="alternate_surface"
        android:summary="@string/mcl_setting_subtitle_use_surface_view"
        android:title="@string/mcl_setting_title_use_surface_view"
        android:icon="@drawable/ic_menu_settings_active"
        android:layout="@layout/preference_switch_layout"
        />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="force_vsync"
        android:summary="@string/preference_force_vsync_description"
        android:title="@string/preference_force_vsync_title"
        android:icon="@drawable/ic_menu_settings_active"
        android:layout="@layout/preference_switch_layout"
        />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="vsync_in_zink"
        android:summary="@string/preference_vsync_in_zink_description"
        android:title="@string/preference_vsync_in_zink_title"
        android:icon="@drawable/ic_menu_settings_active"
        android:layout="@layout/preference_switch_layout"
        />
</PreferenceScreen>