<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="experimental_setting"
        android:title="@string/preference_experimental_title"
        android:fragment="net.kdt.pojavlaunch.fragments.MainMenuFragment"
        android:icon="@drawable/ic_close"
        android:layout="@layout/preference_back_button" />

    <SwitchPreferenceCompat
        android:key="dump_shaders"
        android:title="@string/preference_shader_dump_title"
        android:summary="@string/preference_shader_dump_description"
        android:layout="@layout/preference_switch_layout"
        />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="bigCoreAffinity"
        android:title="@string/preference_force_big_core_title"
        android:summary="@string/preference_force_big_core_desc"
        android:layout="@layout/preference_switch_layout" />

</PreferenceScreen>